--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@ body {
   font-family: "Arial", sans-serif;
   background-color: white;
   color: black;
-  font-size: 14px;
+  font-size: 1rem;
   letter-spacing: 0.03em;
   line-height: 1.14;
 }
@@ -46,46 +46,44 @@ img {
 }
 
 .main-section {
-  padding: 2.5vh;
+  padding: 2rem;
   padding-bottom: 0;
 }
 
 .section {
-  padding: 2vh;
   padding-bottom: 0;
-  padding-top: 1.5vh;
 }
 
 .subsection {
   list-style: none;
-  margin-bottom: 1vw;
+  margin-bottom: 1rem;
 }
 
 .subsection-item {
-  margin-bottom: 1vw;
+  margin-bottom: 1rem;
 }
 
 .hero-section {
   display: flex;
   align-items: center;
-  height: 27vh;
+  height: 12rem;
 }
 
 .h1-title {
   display: block;
-  font-size: 5vh;
+  font-size: 2rem;
   text-transform: uppercase;
-  margin-bottom: 2vh;
+  margin-bottom: 1rem;
 }
 
 .h2-title {
   display: block;
-  font-size: 2.5vh;
+  font-size: 1.5rem;
   font-weight: 900;
   line-height: 1.5;
   text-transform: uppercase;
-  margin-top: 1vh;
-  margin-bottom: 1vh;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
   color: teal;
 }
 
@@ -95,14 +93,14 @@ img {
 
 .h3-title {
   display: block;
-  font-size: 2vh;
+  font-size: 1.2rem;
   text-transform: uppercase;
-  margin-bottom: 0.5vh;
+  margin-bottom: 0.5rem;
 }
 
 .h4-title {
   display: block;
-  font-size: 1.5vh;
+  font-size: 1rem;
 }
 
 .company {
@@ -110,29 +108,29 @@ img {
 }
 
 .text {
-  margin-top: 0.25vh;
-  margin-bottom: 0.5vh;
+  margin-top: 0.25rem;
+  margin-bottom: 0.5rem;
 }
 
 .job {
   font-weight: 600;
   font-style: italic;
-  font-size: 2vh;
+  font-size: 1rem;
   color: teal;
 }
 
 .location {
-  font-size: 1.2vh;
+  font-size: 0.8rem;
 }
 
 .text-accent {
   font-weight: 600;
-  font-size: 1.5vh;
+  font-size: 0.8rem;
   font-style: italic;
 }
 
 .square-style {
-  list-style: square;
+  list-style:disc;
   padding-left: 1rem;
 }
 
@@ -174,8 +172,8 @@ img {
 .work-list-item {
   font-style: normal;
   font-weight: normal;
-  font-size: 14px;
-  line-height: 24px;
+  font-size: 1rem;
+  list-style:inside;
   color: #595959;
 }
 
@@ -188,27 +186,28 @@ img {
 }
 
 .aside-section {
-  width: 25rem;
-  padding: 2.5rem;
+  width: 20rem;
+  padding: 1.5rem;
   background-color: #eeeeee;
 }
 
 .aside-img {
-  width: 20rem;
+  width: 16rem;
   margin-bottom: 1.5rem;
   border-radius: 1rem;
 }
 
 .aside-inner {
-  padding: 1vh 0;
+  padding: 1rem 0;
 }
 
 .aside-item {
-  margin-bottom: 2.5vh;
+  margin-bottom: 1.5rem;
 }
 
 .aside-subsection li {
-  margin-bottom: 0.5vh;
+  margin-bottom: 0.5rem;
+  font-size: 1rem;
 }
 
 .contact-item {
